--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     "require": {
         "jbzoo/utils": "^2.3",
         "nette/utils": "^2.5",
-        "brandonwamboldt/utilphp": "^1.1"
+        "brandonwamboldt/utilphp": "^1.1",
+        "nikic/iter": "^1.6",
+        "danielstjules/stringy": "^3.1"
     },
 	"autoload": {
         "psr-4": {
